https://github.com/Kademi/kademi-dev/issues/19324 Update Velocity to support updated Nashorn